samples/_failures_safe/1761094241_a7fbf6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c4fe6e2.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_8c4fe6e2.c:182: error: expected ‘{’ at end of input
